Add Java Memory Structure and Class Loading visualization

--- a/index.html
+++ b/index.html
@@ -124,6 +124,16 @@
             <h2>🏗️ Java Memory Structure (内存结构)</h2>
         </div>
 
+        <a href="java_memory_structure_demo.html" class="card">
+            <div class="card-header">Memory Structure & Class Loading</div>
+            <div class="card-body">
+                Visualize the Class Loading process (Loading, Linking, Init) and Runtime Data Areas (Stack, Heap, Metaspace).
+            </div>
+            <div class="card-footer">
+                <span>View Demo</span> <span class="tag">HTML</span>
+            </div>
+        </a>
+
         <a href="metaspace_gc_demo.html" class="card">
             <div class="card-header">Metaspace & PermGen</div>
             <div class="card-body">
