Add Java Collections Framework overview and visualization

--- a/index.html
+++ b/index.html
@@ -134,6 +134,16 @@
             </div>
         </a>
 
+        <a href="java_collections_overview.html" class="card">
+            <div class="card-header">Collections Framework</div>
+            <div class="card-body">
+                Overview of List, Set, Map, Queue. Complexity analysis ($O(1)$ vs $O(n)$) and internal structures.
+            </div>
+            <div class="card-footer">
+                <span>View Demo</span> <span class="tag">HTML</span>
+            </div>
+        </a>
+
         <a href="metaspace_gc_demo.html" class="card">
             <div class="card-header">Metaspace & PermGen</div>
             <div class="card-body">
