Add Java IO/NIO/AIO overview and visualization

--- a/index.html
+++ b/index.html
@@ -144,6 +144,16 @@
             </div>
         </a>
 
+        <a href="java_io_nio_overview.html" class="card">
+            <div class="card-header">IO Models (BIO/NIO/AIO)</div>
+            <div class="card-body">
+                Comparison of Blocking, Non-Blocking, and Async IO. Visualizing Buffers, Channels, and Selectors.
+            </div>
+            <div class="card-footer">
+                <span>View Demo</span> <span class="tag">HTML</span>
+            </div>
+        </a>
+
         <a href="metaspace_gc_demo.html" class="card">
             <div class="card-header">Metaspace & PermGen</div>
             <div class="card-body">
