Add Spring Bean Lifecycle visualization

--- a/index.html
+++ b/index.html
@@ -154,6 +154,21 @@
             </div>
         </a>
 
+        <!-- Section: Spring Framework -->
+        <div class="card-section">
+            <h2>🍃 Spring Framework</h2>
+        </div>
+
+        <a href="spring_bean_lifecycle_demo.html" class="card">
+            <div class="card-header">Spring Bean Lifecycle</div>
+            <div class="card-body">
+                Visualize the complete creation pipeline: Instantiation -> DI -> Aware -> BPP -> Init -> Destruction.
+            </div>
+            <div class="card-footer">
+                <span>View Demo</span> <span class="tag">HTML</span>
+            </div>
+        </a>
+
         <a href="metaspace_gc_demo.html" class="card">
             <div class="card-header">Metaspace & PermGen</div>
             <div class="card-body">
