Add MySQL, Redis, Distributed System, and Spring Boot demos

--- a/index.html
+++ b/index.html
@@ -169,6 +169,56 @@
             </div>
         </a>
 
+        <a href="springboot_startup_process_demo.html" class="card">
+            <div class="card-header">Spring Boot Startup</div>
+            <div class="card-body">
+                Interactive timeline of <code>SpringApplication.run()</code>: Bootstrap, Environment, Context Refresh, Runners.
+            </div>
+            <div class="card-footer">
+                <span>View Demo</span> <span class="tag">HTML</span>
+            </div>
+        </a>
+
+        <!-- Section: Database Internals -->
+        <div class="card-section">
+            <h2>💾 Database Internals (MySQL & Redis)</h2>
+        </div>
+
+        <a href="mysql_btree_index_demo.html" class="card">
+            <div class="card-header">MySQL B+ Tree Index</div>
+            <div class="card-body">
+                Visualize B+ Tree structure, Page Splitting, and Index Lookup operations.
+            </div>
+            <div class="card-footer">
+                <span>View Demo</span> <span class="tag">HTML</span>
+            </div>
+        </a>
+
+        <a href="redis_data_structures_demo.html" class="card">
+            <div class="card-header">Redis Data Structures</div>
+            <div class="card-body">
+                Visualize Redis internal structures: SkipList (ZSet) and LRU Cache Eviction.
+            </div>
+            <div class="card-footer">
+                <span>View Demo</span> <span class="tag">HTML</span>
+            </div>
+        </a>
+
+        <!-- Section: Distributed Systems -->
+        <div class="card-section">
+            <h2>🌐 Distributed Systems (分布式系统)</h2>
+        </div>
+
+        <a href="distributed_system_cap_demo.html" class="card">
+            <div class="card-header">CAP Theorem Demo</div>
+            <div class="card-body">
+                Interactive simulation of Network Partitions and the trade-off between Consistency and Availability.
+            </div>
+            <div class="card-footer">
+                <span>View Demo</span> <span class="tag">HTML</span>
+            </div>
+        </a>
+
         <a href="metaspace_gc_demo.html" class="card">
             <div class="card-header">Metaspace & PermGen</div>
             <div class="card-body">
