Add Spring Circular Dependency, Transaction, and Config demos

--- a/index.html
+++ b/index.html
@@ -179,6 +179,36 @@
             </div>
         </a>
 
+        <a href="spring_circular_dependency_demo.html" class="card">
+            <div class="card-header">Circular Dependency</div>
+            <div class="card-body">
+                Visualize the Three-Level Cache mechanism (Singleton, EarlySingleton, Factory) resolving A &harr; B dependencies.
+            </div>
+            <div class="card-footer">
+                <span>View Demo</span> <span class="tag">HTML</span>
+            </div>
+        </a>
+
+        <a href="springboot_transaction_demo.html" class="card">
+            <div class="card-header">Transaction Propagation</div>
+            <div class="card-body">
+                Interactive demo of <code>@Transactional</code> propagation: REQUIRED, REQUIRES_NEW, NESTED, and Rollback rules.
+            </div>
+            <div class="card-footer">
+                <span>View Demo</span> <span class="tag">HTML</span>
+            </div>
+        </a>
+
+        <a href="spring_boot_config_annotation_demo.html" class="card">
+            <div class="card-header">Config & Annotations</div>
+            <div class="card-body">
+                Cheat sheet for Configuration Priority (Properties vs YAML vs CLI) and common Annotations (@Service, @Bean, etc).
+            </div>
+            <div class="card-footer">
+                <span>View Demo</span> <span class="tag">HTML</span>
+            </div>
+        </a>
+
         <!-- Section: Database Internals -->
         <div class="card-section">
             <h2>💾 Database Internals (MySQL & Redis)</h2>
