Add Transaction Pitfalls, MySQL Index Invalidation, AOP Proxy, and Redis Cache Problems demos

--- a/index.html
+++ b/index.html
@@ -209,6 +209,26 @@
             </div>
         </a>
 
+        <a href="spring_transaction_pitfalls_demo.html" class="card">
+            <div class="card-header">Transaction Pitfalls</div>
+            <div class="card-body">
+                Common reasons why <code>@Transactional</code> fails: Self-invocation, Private methods, Exception swallowing.
+            </div>
+            <div class="card-footer">
+                <span>View Demo</span> <span class="tag">HTML</span>
+            </div>
+        </a>
+
+        <a href="spring_aop_proxy_demo.html" class="card">
+            <div class="card-header">Spring AOP Proxy</div>
+            <div class="card-body">
+                Visualize JDK Dynamic Proxy vs CGLIB. How Aspects wrap the Target object.
+            </div>
+            <div class="card-footer">
+                <span>View Demo</span> <span class="tag">HTML</span>
+            </div>
+        </a>
+
         <!-- Section: Database Internals -->
         <div class="card-section">
             <h2>💾 Database Internals (MySQL & Redis)</h2>
@@ -224,10 +244,30 @@
             </div>
         </a>
 
+        <a href="mysql_index_invalidation_demo.html" class="card">
+            <div class="card-header">MySQL Index Invalidation</div>
+            <div class="card-body">
+                Interactive query builder showing when Indexes are ignored (LIKE '%...', OR, Functions, Type Conversion).
+            </div>
+            <div class="card-footer">
+                <span>View Demo</span> <span class="tag">HTML</span>
+            </div>
+        </a>
+
         <a href="redis_data_structures_demo.html" class="card">
             <div class="card-header">Redis Data Structures</div>
             <div class="card-body">
                 Visualize Redis internal structures: SkipList (ZSet) and LRU Cache Eviction.
+            </div>
+            <div class="card-footer">
+                <span>View Demo</span> <span class="tag">HTML</span>
+            </div>
+        </a>
+
+        <a href="redis_cache_problems_demo.html" class="card">
+            <div class="card-header">Redis Cache Problems</div>
+            <div class="card-body">
+                Simulate Cache Penetration, Avalanche, and Breakdown. Visualize solutions (Bloom Filter, Mutex).
             </div>
             <div class="card-footer">
                 <span>View Demo</span> <span class="tag">HTML</span>
