--- a/index.html
+++ b/index.html
@@ -274,6 +274,16 @@
             </div>
         </a>
 
+        <a href="bloom_filter_demo.html" class="card">
+            <div class="card-header">Bloom Filter Algo</div>
+            <div class="card-body">
+                Visualize how Bloom Filters work: Bit Arrays, Hash Functions, and False Positives.
+            </div>
+            <div class="card-footer">
+                <span>View Demo</span> <span class="tag">HTML</span>
+            </div>
+        </a>
+
         <!-- Section: Distributed Systems -->
         <div class="card-section">
             <h2>🌐 Distributed Systems (分布式系统)</h2>
