Add Spring AOP Validation Demo with code and simulation

--- a/index.html
+++ b/index.html
@@ -229,6 +229,16 @@
             </div>
         </a>
 
+        <a href="spring_aop_validation_demo.html" class="card">
+            <div class="card-header">AOP Validation Demo</div>
+            <div class="card-body">
+                Real-world example: Intercepting API calls to validate Credit Card risk (Logo, Org, BlockCode) before execution.
+            </div>
+            <div class="card-footer">
+                <span>View Demo</span> <span class="tag">HTML</span>
+            </div>
+        </a>
+
         <!-- Section: Database Internals -->
         <div class="card-section">
             <h2>💾 Database Internals (MySQL & Redis)</h2>
