Add Spring AOP Architecture Guide explaining Advice and JoinPoint concepts

--- a/index.html
+++ b/index.html
@@ -239,6 +239,16 @@
             </div>
         </a>
 
+        <a href="spring_aop_architecture_guide.html" class="card">
+            <div class="card-header">AOP Architecture Guide</div>
+            <div class="card-body">
+                Tutorial: How to create an Aspect step-by-step. Explaining Advice, JoinPoint, and Pointcut configuration.
+            </div>
+            <div class="card-footer">
+                <span>View Demo</span> <span class="tag">HTML</span>
+            </div>
+        </a>
+
         <!-- Section: Database Internals -->
         <div class="card-section">
             <h2>💾 Database Internals (MySQL & Redis)</h2>
