Add Redis Interview Cheat Sheet

--- a/index.html
+++ b/index.html
@@ -296,6 +296,16 @@
             </div>
         </a>
 
+        <a href="redis_interview_guide.html" class="card">
+            <div class="card-header">Redis Interview Cheat Sheet</div>
+            <div class="card-body">
+                Key topics: Persistence (RDB/AOF), Cache Consistency, Distributed Locks, and Threading Model.
+            </div>
+            <div class="card-footer">
+                <span>View Guide</span> <span class="tag">HTML</span>
+            </div>
+        </a>
+
         <!-- Section: Distributed Systems -->
         <div class="card-section">
             <h2>🌐 Distributed Systems (分布式系统)</h2>
