--- a/index.html
+++ b/index.html
@@ -266,6 +266,16 @@
             </div>
         </a>
 
+        <a href="mysql_mvcc_demo.html" class="card">
+            <div class="card-header">MySQL MVCC</div>
+            <div class="card-body">
+                Visualize Multi-Version Concurrency Control: Undo Log Chain, Read Views, and Visibility Rules.
+            </div>
+            <div class="card-footer">
+                <span>View Demo</span> <span class="tag">HTML</span>
+            </div>
+        </a>
+
         <a href="redis_data_structures_demo.html" class="card">
             <div class="card-header">Redis Data Structures</div>
             <div class="card-body">
@@ -308,8 +318,48 @@
 
         <!-- Section: Distributed Systems -->
         <div class="card-section">
-            <h2>🌐 Distributed Systems (分布式系统)</h2>
+            <h2>🌐 Distributed Systems & Networking (分布式/网络)</h2>
         </div>
+
+        <a href="tcp_handshake_demo.html" class="card">
+            <div class="card-header">TCP Handshake & Wave</div>
+            <div class="card-body">
+                Visualize TCP 3-Way Handshake (Connection) and 4-Way Wave (Teardown) with State Machine.
+            </div>
+            <div class="card-footer">
+                <span>View Demo</span> <span class="tag">HTML</span>
+            </div>
+        </a>
+
+        <a href="consistent_hashing_demo.html" class="card">
+            <div class="card-header">Consistent Hashing</div>
+            <div class="card-body">
+                Visualize Hash Ring, Data Skew, and Virtual Nodes for distributed load balancing.
+            </div>
+            <div class="card-footer">
+                <span>View Demo</span> <span class="tag">HTML</span>
+            </div>
+        </a>
+
+        <a href="circuit_breaker_demo.html" class="card">
+            <div class="card-header">Circuit Breaker Pattern</div>
+            <div class="card-body">
+                Visualize State Transitions (Closed -> Open -> Half-Open) and Failure Thresholds.
+            </div>
+            <div class="card-footer">
+                <span>View Demo</span> <span class="tag">HTML</span>
+            </div>
+        </a>
+
+        <a href="kafka_partition_demo.html" class="card">
+            <div class="card-header">Kafka Partitions</div>
+            <div class="card-body">
+                Visualize Topic Partitions, Consumer Groups, Rebalancing, and Key-Hash Routing.
+            </div>
+            <div class="card-footer">
+                <span>View Demo</span> <span class="tag">HTML</span>
+            </div>
+        </a>
 
         <a href="distributed_system_cap_demo.html" class="card">
             <div class="card-header">CAP Theorem Demo</div>
