--- a/circuit_breaker_demo.html
+++ b/circuit_breaker_demo.html
@@ -59,6 +59,16 @@
 <body>
     <h1>Circuit Breaker Pattern</h1>
     
+    <div style="width: 1000px; margin-bottom: 20px; background: #fff; padding: 15px; border-radius: 8px; box-shadow: 0 2px 5px rgba(0,0,0,0.05);">
+        <h3 style="margin-top:0; color:#333;">Demo Guide</h3>
+        <ul style="margin:0; padding-left: 20px; color: #555;">
+            <li><strong>Normal Flow (Closed):</strong> Send "Success" requests. The failure counter stays low.</li>
+            <li><strong>Trip Circuit (Open):</strong> Send "Failed" requests until the threshold (3) is reached. The state flips to OPEN.</li>
+            <li><strong>Fail Fast:</strong> Try sending requests while OPEN. They are blocked immediately without executing.</li>
+            <li><strong>Recovery (Half-Open):</strong> Wait 3 seconds. The state becomes HALF-OPEN. The next request determines if we go back to CLOSED (Success) or OPEN (Fail).</li>
+        </ul>
+    </div>
+
     <div class="container">
         <div class="visual-area">
             <div class="state-diagram">
