--- a/consistent_hashing_demo.html
+++ b/consistent_hashing_demo.html
@@ -50,12 +50,12 @@
     <h1>Consistent Hashing Ring</h1>
     
     <div style="width: 1000px; margin-bottom: 20px; background: #fff; padding: 15px; border-radius: 8px; box-shadow: 0 2px 5px rgba(0,0,0,0.05);">
-        <h3 style="margin-top:0; color:#333;">Demo Guide</h3>
+        <h3 style="margin-top:0; color:#333;">演示指南 (Demo Guide)</h3>
         <ul style="margin:0; padding-left: 20px; color: #555;">
-            <li><strong>Add Node:</strong> Adds a new server to the Hash Ring (0° - 360°). Existing keys will automatically rebalance.</li>
-            <li><strong>Add Key:</strong> Simulates a data item. It routes to the first Node found clockwise.</li>
-            <li><strong>Virtual Nodes:</strong> Enable this to create multiple copies (vNodes) of each real node, reducing data skew and improving balance.</li>
-            <li><strong>Remove Node:</strong> Simulates a server crash. Its keys are re-routed to the next available node.</li>
+            <li><strong>添加节点 (Add Node):</strong> 在哈希环 (0° - 360°) 上添加一个新服务器。现有的 Key 会自动重新平衡。</li>
+            <li><strong>添加数据 (Add Key):</strong> 模拟添加数据。它会被路由到顺时针方向找到的第一个节点。</li>
+            <li><strong>虚拟节点 (Virtual Nodes):</strong> 勾选此项可为每个真实节点创建多个副本 (vNodes)，以减少数据倾斜并改善平衡。</li>
+            <li><strong>移除节点 (Remove Node):</strong> 模拟服务器宕机。它的 Key 会被重新路由到下一个可用节点。</li>
         </ul>
     </div>
 
