--- a/tcp_handshake_demo.html
+++ b/tcp_handshake_demo.html
@@ -42,11 +42,11 @@
     <h1>TCP 3-Way Handshake & 4-Way Wave</h1>
     
     <div style="width: 800px; margin-bottom: 20px; background: #fff; padding: 15px; border-radius: 8px; box-shadow: 0 2px 5px rgba(0,0,0,0.05);">
-        <h3 style="margin-top:0; color:#333;">Demo Guide</h3>
+        <h3 style="margin-top:0; color:#333;">演示指南 (Demo Guide)</h3>
         <ul style="margin:0; padding-left: 20px; color: #555;">
-            <li><strong>Handshake:</strong> Click "Start Connection" to initiate the 3-Way Handshake (SYN -> SYN-ACK -> ACK). Watch the states change to ESTABLISHED.</li>
-            <li><strong>Teardown:</strong> Click "Close Connection" to start the 4-Way Wave (FIN -> ACK -> FIN -> ACK). Note the TIME_WAIT state on the active closer.</li>
-            <li><strong>Logs:</strong> Observe the Sequence (Seq) and Acknowledgment (Ack) numbers in the console below.</li>
+            <li><strong>建立连接 (Handshake):</strong> 点击 "Start Connection" 开始三次握手 (SYN -> SYN-ACK -> ACK)。观察状态变为 ESTABLISHED。</li>
+            <li><strong>断开连接 (Teardown):</strong> 点击 "Close Connection" 开始四次挥手 (FIN -> ACK -> FIN -> ACK)。注意主动关闭方的 TIME_WAIT 状态。</li>
+            <li><strong>日志 (Logs):</strong> 在下方控制台观察序列号 (Seq) 和确认号 (Ack) 的变化。</li>
         </ul>
     </div>
 
