--- a/kafka_partition_demo.html
+++ b/kafka_partition_demo.html
@@ -52,11 +52,11 @@
     <h1>Kafka Partitions & Consumer Groups</h1>
     
     <div style="width: 1100px; margin-bottom: 20px; background: #fff; padding: 15px; border-radius: 8px; box-shadow: 0 2px 5px rgba(0,0,0,0.05);">
-        <h3 style="margin-top:0; color:#333;">Demo Guide</h3>
+        <h3 style="margin-top:0; color:#333;">演示指南 (Demo Guide)</h3>
         <ul style="margin:0; padding-left: 20px; color: #555;">
-            <li><strong>Consumers:</strong> Add/Remove consumers to the group. Watch the partitions <em>Rebalance</em> (re-assign) among available consumers.</li>
-            <li><strong>Produce (Round Robin):</strong> Sends messages sequentially to P0, P1, P2, P3. Good for load balancing.</li>
-            <li><strong>Produce (Keyed):</strong> Enter a key (e.g., "order-123"). Messages with the same key always go to the same partition (Hash Routing), ensuring ordering.</li>
+            <li><strong>消费者 (Consumers):</strong> 添加/移除消费者。观察分区在可用消费者之间进行 <em>Rebalance</em> (重平衡)。</li>
+            <li><strong>生产消息 (Round Robin):</strong> 轮询发送消息到 P0, P1, P2, P3。适用于负载均衡。</li>
+            <li><strong>指定 Key (Keyed):</strong> 输入一个 Key (如 "order-123")。相同 Key 的消息总是进入同一个分区 (Hash 路由)，保证顺序性。</li>
         </ul>
     </div>
 
