--- a/mysql_mvcc_demo.html
+++ b/mysql_mvcc_demo.html
@@ -54,12 +54,12 @@
     <h1>MySQL MVCC (Multi-Version Concurrency Control)</h1>
     
     <div style="width: 1100px; margin-bottom: 20px; background: #fff; padding: 15px; border-radius: 8px; box-shadow: 0 2px 5px rgba(0,0,0,0.05);">
-        <h3 style="margin-top:0; color:#333;">Demo Guide</h3>
+        <h3 style="margin-top:0; color:#333;">演示指南 (Demo Guide)</h3>
         <ul style="margin:0; padding-left: 20px; color: #555;">
-            <li><strong>Start Trx:</strong> Creates a new active transaction with a unique ID.</li>
-            <li><strong>Update:</strong> Modifies the row. This creates a new version in the <em>Undo Log Chain</em>, pointing to the previous version.</li>
-            <li><strong>Read:</strong> Simulates a SELECT. It creates a <em>Read View</em> (Snapshot) and traverses the Undo Log to find the first "visible" version based on Isolation rules.</li>
-            <li><strong>Commit:</strong> Ends the transaction, making its changes potentially visible to future Read Views.</li>
+            <li><strong>开启事务 (Start Trx):</strong> 创建一个新的活跃事务，分配唯一的事务 ID。</li>
+            <li><strong>更新数据 (Update):</strong> 修改行数据。这会在 <em>Undo Log Chain</em> (回滚日志链) 中创建一个新版本，指向旧版本。</li>
+            <li><strong>读取数据 (Read):</strong> 模拟 SELECT 查询。它会创建一个 <em>Read View</em> (快照)，并遍历 Undo Log 根据隔离规则找到第一个"可见"的版本。</li>
+            <li><strong>提交事务 (Commit):</strong> 结束事务，使其修改对未来的 Read View 可见。</li>
         </ul>
     </div>
 
