fix: 更新 index.html 中的 CAP 定理演示链接

--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
             </div>
         </a>
 
-        <a href="distributed_system_cap_demo.html" class="card">
+        <a href="cap_theorem_demo.html" class="card">
             <div class="card-header">CAP Theorem Demo</div>
             <div class="card-body">
                 Interactive simulation of Network Partitions and the trade-off between Consistency and Availability.
